tests/fixtures/invalid/pow_float_bool_list.py
# Cannot call pow() with Float, Bool, List[int]
x = pow(1.0, True, [1, 2, 3])
